@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.fernsehkritik" name="Fernsehkritik TV" version="1.0.0" provider-name="cdwertmann">
+<addon id="plugin.video.fernsehkritik" name="Fernsehkritik TV" version="1.0.1" provider-name="cdwertmann">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.common.plugin.cache" version="0.9.1"/>
