@@ -1,3 +1,7 @@
+[B]Version 1.0.1[/B]
+
+- fix video URLs and poster images after site update
+
 [B]Version 1.0.0[/B]
 
 - initial release
